# experiments

./: .gitignore
adk_v1/: pyproject.toml
adk_v1/agent/: agent.py
adk_v1/agent/.adk/: session.db
adk_v2/: pyproject.toml
adk_v2/agent_v2_01/: agent.py
agent/: pyproject.toml
agent/data/db/: chroma.sqlite3
agent/src/llm/: pdf_handler.py
agent_registry/: main.py  pyproject.toml  start_registry_server.py
agent_registry/conf/: agent_registry.toml
mcp/: pyproject.toml
mcp_simple/: config.py  http_streamable_server.py  pyproject.toml  simple_agent.py  test.py  test2.py
mcp_simple/agent/: agent_multi_mcp_servers.py  demo_agent.py  demo_agent_v2.py  mcp_simple_agent.py
mcp_simple/client/: client_direct_tools_call.py  mcp_simple_client.py
mcp_simple/conf/: mcp_simple.toml
mcp_simple/server/: http_knowledge_server.py  http_streamable_server.py  stdio_weather_server.py
misc/: get_local_ip.py
ollama/: pyproject.toml
ollama/working/: validate_local_ollama.py
reader_m365/: main.py  pyproject.toml
